# walkie-master

./: .gitignore  LICENSE  README.md  agent.md  pyproject.toml
apps/asr-agent/: main.py  pyproject.toml
apps/asr-agent/src/: debug_camera.py
apps/asr-agent/src/asr_agent/: prompt.py
apps/asr-agent/src/asr_agent/asr/: model.py  processor.py
apps/asr-agent/src/asr_agent/core/: client.py  orchestrator.py
apps/asr-agent/src/asr_agent/graph/: nodes.py  state.py  workflow.py
apps/asr-agent/src/asr_agent/tests/: smoke_test.py  test_asr.py  test_llm.py  test_llm_logic.py  test_memory.py  test_nav.py  test_navigation.py  test_navigation_sim.py  test_navigation_sim_sequential.py  test_sdk_arm_connection.py  test_tool.py  test_vision.py  test_vision_pipeline.py  test_vision_real_data.py  test_vision_sim.py
apps/asr-agent/src/asr_agent/tools/: memory.py  robot.py  vision.py
scripts/: serve_llm.sh  setup_models.sh
tests/: conftest.py  test_integration.py  test_vision_to_db.py  verify_sdk.py
