[project]
name = "walkie-master"
version = "0.1.0"
description = "RoboCup@Home 2026 Master Repository"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.0",
    "opencv-python>=4.11.0",
    "python-dotenv>=1.2.1",
    "pydantic>=2.0.0",
    "walkie-sdk",
    "walkie-vision",
    "walkie-db"
]

[tool.uv.workspace]
members = ["apps/*", "packages/*"]

[tool.uv.sources]
walkie-sdk = { workspace = true }
walkie-db = { workspace = true }
walkie-vision = { workspace = true }
