[project]
name = "walkie-master"
version = "0.1.2"
description = "RoboCup@Home 2026 Master Repository"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.0",
    "opencv-python>=4.11.0",
    "python-dotenv>=1.2.1",
    "pytest",
    "lark-parser",
    "pydantic>=2.0.0",
    "walkie-sdk",
    "walkie-vision",
    "walkie-db",
    "tqdm>=4.67.3",
    "vllm>=0.15.1",
    "bitsandbytes>=0.49.1",
    "faster-whisper>=1.2.1",
    "langchain-core>=1.2.11",
    "langgraph>=1.0.8",
]

[tool.uv.workspace]
members = ["apps/*", "packages/*"]

[tool.uv.sources]
walkie-sdk = { workspace = true }
walkie-db = { workspace = true }
walkie-vision = { workspace = true }
